<resources>
    <string name="app_name">Digitales Hirn</string>
    <string name="mic_button_desc">Spracheingabe starten</string>
    <string name="tab_today">Heute</string>
    <string name="tab_tasks">Aufgaben</string>
    <string name="tab_notes">Notizen</string>
    <string name="tab_ideas">Ideen</string>
    <string name="tab_search">Suche</string>
    <string name="category_task">Aufgabe</string>
    <string name="category_reminder">Erinnerung</string>
    <string name="category_note">Notiz</string>
    <string name="category_idea">Idee</string>
    <string name="action_delete">Löschen</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="action_complete">Erledigt</string>
    <string name="action_save">Speichern</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_convert_to_task">Als Aufgabe speichern</string>
    <string name="label_title">Titel</string>
    <string name="label_description">Beschreibung</string>
    <string name="label_category">Kategorie</string>
    <string name="label_date">Datum</string>
    <string name="label_time">Uhrzeit</string>
    <string name="label_reminder">Erinnerung</string>
    <string name="label_priority">Priorität</string>
    <string name="label_keywords">Schlagwörter</string>
    <string name="priority_low">Niedrig</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_high">Hoch</string>
    <string name="hint_search">Suchen…</string>
    <string name="hint_title">Titel eingeben</string>
    <string name="hint_description">Beschreibung (optional)</string>
    <string name="hint_speak">Sprechen oder tippen…</string>
    <string name="empty_tasks">Keine Aufgaben</string>
    <string name="empty_notes">Keine Notizen</string>
    <string name="empty_ideas">Keine Ideen</string>
    <string name="empty_search">Keine Ergebnisse</string>
    <string name="empty_today">Heute keine Einträge</string>
    <string name="section_open">Offen</string>
    <string name="section_completed">Erledigt</string>
    <string name="section_overdue">Überfällig</string>
    <string name="section_today">Heute</string>
    <string name="needs_date_check">Termin prüfen</string>
    <string name="confirm_delete">Wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="permission_microphone_title">Mikrofon-Berechtigung</string>
    <string name="permission_microphone_msg">Für die Spracheingabe wird das Mikrofon benötigt.</string>
    <string name="speech_not_available">Spracherkennung nicht verfügbar</string>
    <string name="speech_error">Spracherkennung fehlgeschlagen</string>
    <string name="saved_successfully">Eintrag gespeichert</string>
    <string name="deleted_successfully">Eintrag gelöscht</string>
    <string name="notification_channel_name">Erinnerungen</string>
    <string name="notification_channel_desc">Erinnerungen von Digitales Hirn</string>
    <string name="recognized_text_label">Erkannter Text:</string>
    <string name="tap_to_start">Tippen zum Starten</string>
    <string name="listening">Höre zu…</string>
    <string name="overdue">Überfällig</string>
    <string name="no_date">Kein Datum</string>
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>
    <string name="select_date">Datum wählen</string>
    <string name="select_time">Uhrzeit wählen</string>
    <string name="open_tasks">Offene Aufgaben</string>
    <string name="done_tasks">Erledigte Aufgaben</string>
    <string name="overdue_tasks">Überfällige Aufgaben</string>
    <string name="today_tasks">Heute fällige Aufgaben</string>
    <string name="tab_settings">Kategorien</string>
    <string name="settings_category_title">Kategorienamen</string>
    <string name="settings_category_hint">Lege eigene Anzeigenamen für die Kategorien fest.</string>
    <string name="settings_reset_title">Zurücksetzen</string>
    <string name="settings_reset_message">Alle Kategorienamen auf Standard zurücksetzen?</string>
    <string name="settings_reset_button">Zurücksetzen</string>
    <string name="settings_reset_done">Kategorienamen zurückgesetzt</string>
    <string name="settings_saved">Kategorienamen gespeichert</string>
    <string name="settings_name_empty_error">Kein Kategoriename darf leer sein</string>
    <string name="settings_name_duplicate_error">Kategorienamen müssen eindeutig sein</string>
    <string name="category_task_default">Aufgabe (Standard)</string>
    <string name="category_reminder_default">Erinnerung (Standard)</string>
    <string name="category_note_default">Notiz (Standard)</string>
    <string name="category_idea_default">Idee (Standard)</string>
</resources>
