<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/tab_today" />
    <item
        android:id="@+id/tasksFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/tab_tasks" />
    <item
        android:id="@+id/notesFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/tab_notes" />
    <item
        android:id="@+id/ideasFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/tab_ideas" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/tab_search" />
</menu>
